# Medical-Chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: model.py  prompt.py  streamlit.py
src/: main.ipynb
